# application-boilerplate

./: .dockerignore  .env.optional.example  .env.required.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/: main.py
src/api/: base.py
src/api/v1/: exception_handlers.py  router.py
src/api/v1/routes/: excel_processing.py  reports.py
src/api/v1/schemas/: __init__.py  reports.py
src/bootstrap/: app_factory.py  container.py  logging.py
src/core/: config.py
src/core/base/: custom_types.py  exceptions.py
src/core/interfaces/providers/: __init__.py
src/core/interfaces/providers/cloud_storage_provider/: provider.py
src/core/interfaces/repositories/: __init__.py  unit_of_work.py
src/core/interfaces/repositories/raw_excel_repository/: repository.py
src/core/interfaces/repositories/report_repository/: repository.py
src/core/interfaces/tools/: __init__.py
src/core/interfaces/tools/excel_bytes_parser/: tool.py
src/core/interfaces/tools/report_generator/: tool.py
src/core/models/: excel_models.py  reports.py
src/providers/: __init__.py
src/providers/azure_provider/: provider.py
src/repositories/: __init__.py
src/repositories/sqlalchemy_repositories/: orm_models.py  unit_of_work.py
src/repositories/sqlalchemy_repositories/migrations/: env.py
src/repositories/sqlalchemy_repositories/migrations/versions/: 0001-2025_12_30_1839-created_raw_excel_table.py  0002-2025_12_30_1843-created_report_table.py
src/repositories/sqlalchemy_repositories/raw_excel_repository/: repository.py
src/repositories/sqlalchemy_repositories/report_repository/: repository.py
src/services/: __init__.py
src/services/excel_processing_service/: service.py
src/services/report_service/: service.py
src/tools/: __init__.py
src/tools/custom_report_generator/: tool.py
src/tools/pandas_tool/: tool.py
tests/: conftest.py
tests/fixtures/: app.py  providers.py  repositories.py  services.py
tests/integration/: test_fastapi_app.py
tests/integration/api/v1/: test_reports.py
